--- a/index.html
+++ b/index.html
@@ -4,27 +4,52 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food delivery</title>
+    <!-- google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+    <!-- modern-normalaze -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css"
+    />
+    <!-- my-styles -->
+    <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html"
+    <header class="header">
+      <div class="container">
+        <a class="logo" href="./index.html"
           ><img
             src="./images/logo-min.png"
             alt="logo food sta"
             width="66"
             height="52"
         /></a>
-        <ul>
-          <li><a href="./index.html">Home</a></li>
-          <li><a href="">About</a></li>
-          <li><a href="">Service</a></li>
-          <li><a href="">Menu</a></li>
-          <li><a href="">Contact</a></li>
-        </ul>
-      </nav>
-
-      <button type="button">Order Now</button>
+        <nav class="nav">
+          <ul class="nav-list">
+            <li class="nav-list-item">
+              <a class="nav-link" href="./index.html">Home</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-link" href="">About</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-link" href="">Service</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-link" href="">Menu</a>
+            </li>
+            <li class="nav-list-item">
+              <a class="nav-link" href="">Contact</a>
+            </li>
+          </ul>
+        </nav>
+        <button type="button">Order Now</button>
+      </div>
     </header>
     <main>
       <section>
