--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- header section -->
     <header class="header">
       <div class="container">
         <a class="logo" href="./index.html"
@@ -48,54 +49,74 @@
             </li>
           </ul>
         </nav>
-        <button type="button">Order Now</button>
+        <button class="main-btn" type="button">Order Now</button>
       </div>
     </header>
     <main>
-      <section>
-        <h1>Enjoy Your Favorite Food From Anywhere</h1>
-        <p>
-          With just a few clicks, you can have your favorite meals delivered
-          straight to your doorstep, no matter where you are. Order now and
-          enjoy a hassle-free and delicious meal from the comfort of your own
-          home.
-        </p>
-        <button type="button">Order Now</button>
-        <img
-          src="./images/hero/salat-bow-min.png"
-          alt="salat bow"
-          width="528"
-          height="528"
-        />
+      <!-- hero section -->
+      <section class="page-hero">
+        <div class="container hero-container">
+          <div class="page-hero-left-side">
+            <h1 class="main-title">Enjoy Your Favorite Food From Anywhere</h1>
+            <p class="page-hero-text">
+              With just a few clicks, you can have your favorite meals delivered
+              straight to your doorstep, no matter where you are. Order now and
+              enjoy a hassle-free and delicious meal from the comfort of your
+              own home.
+            </p>
+            <button class="main-btn" type="button">Order Now</button>
+          </div>
+          <div class="page-hero-img-div">
+            <img
+              class="page-hero-img"
+              src="./images/hero/salat-bow-min.png"
+              alt="salat bow"
+              width="528"
+              height="528"
+            />
+          </div>
+        </div>
       </section>
 
-      <section>
-        <img src="./images/offering/apple-min.png" alt="apple" />
-        <h2>What’s Special About Our Offerings</h2>
-        <p>
-          With our platform, you can browse through a diverse selection of
-          cuisines and local restaurants, and choose from a variety of dishes
-          that cater to your specific taste buds.
-        </p>
-        <ul>
-          <li>
-            <h3>Fasest Delivery</h3>
-            <p>
-              Our advanced logistics system and dedicated delivery partners
-              ensure that your meals are delivered to you within 30-minutes.
+      <!-- offering section -->
+      <section class="page-offering">
+        <div class="container offering-container">
+          <div class="page-offering-img-div">
+            <img src="./images/offering/apple-min.png" alt="apple" />
+          </div>
+          <div class="page-offering-div-text">
+            <h2 class="page-offering-title">
+              What’s Special About Our Offerings
+            </h2>
+            <p class="page-offering-text">
+              With our platform, you can browse through a diverse selection of
+              cuisines and local restaurants, and choose from a variety of
+              dishes that cater to your specific taste buds.
             </p>
-          </li>
-          <li>
-            <h3>Easy To Order</h3>
-            <p>
-              You can browse through a wide variety of cuisines and restaurants,
-              select your favorite meals, and place your order in just a few
-              clicks.
-            </p>
-          </li>
-        </ul>
-        <button type="button">Order Now</button>
+            <ul class="page-offering-menu">
+              <li class="page-offering-menu-item">
+                <h3 class="page-offering-subtitle">Fasest Delivery</h3>
+                <p class="page-offering-subtext">
+                  Our advanced logistics system and dedicated delivery partners
+                  ensure that your meals are delivered to you within 30-minutes.
+                </p>
+              </li>
+              <li class="page-offering-menu-item">
+                <h3 class="page-offering-subtitle">Easy To Order</h3>
+                <p class="page-offering-subtext">
+                  You can browse through a wide variety of cuisines and
+                  restaurants, select your favorite meals, and place your order
+                  in just a few clicks.
+                </p>
+              </li>
+            </ul>
+            <button class="main-btn offering-btn" type="button">
+              Order Now
+            </button>
+          </div>
+        </div>
       </section>
+
       <section>
         <h2>Order Now</h2>
         <p>Looking for something delicious?</p>
@@ -197,7 +218,7 @@
         </p>
         <form action="#">
           <input type="email" placeholder="Enter your email" />
-          <button type="submit">Subscribe</button>
+          <button class="main-btn" type="submit">Subscribe</button>
         </form>
         <img
           src="./images/subscrible/banan-min.png"
@@ -220,7 +241,7 @@
         <strong>Subscribe</strong>
         <form action="#">
           <input type="email" placeholder="Enter your email" />
-          <button type="submit">Subscribe</button>
+          <button class="main-btn" type="submit">Subscribe</button>
         </form>
         <p>By subscribing you agree to with our<a href="">Privacy Policy</a></p>
         <ul>
