--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
       </section>
 
       <!-- footer section -->
-      <footer class="page-footer" >
-        <div class="container">
+      <footer class="page-footer container" >
+        <div class="">
           <div class="container-footer">
             <div class="page-footer-nav">
                 <a class="logo-footer" href="./index.html"
