--- a/index.html
+++ b/index.html
@@ -337,9 +337,63 @@
                 2022 FoodSta. All right reserved.
               </p>
             </div>
-
         </div>
       </footer>
+
+      <div class="backdrop is-open">
+        <div class="modal">
+          <button type="button" class="modal-close-btn">
+            <svg class="modal-close-icon" width="11" height="11">
+              <use href="./images/sprite.svg#icon-cross"></use>
+            </svg>
+          </button>
+          <form>
+                <p class="modal-title">Order Form</p>
+
+                  <div class="input-wrapper">
+                    <label for="user-name" class="modal-label">Name</label>
+                    <input 
+                    type="text" 
+                    class="modal-input" 
+                    name="user-name" 
+                    id="user-name" 
+                    placeholder="Your name"
+                    title="Oleksii"
+                    
+                    required>
+                  </div>
+
+                  <div class="input-wrapper">
+                    <label for="user-tel" class="modal-label">Phone number</label>
+                    <input 
+                    type="tel" 
+                    class="modal-input" 
+                    name="user-tel" 
+                    id="user-tel"
+                    placeholder="+38(0_ _) _ _ _   _ _   _ _"
+                    required
+                    pattern="0-9"
+                    title="+38(0xx) xxx xx xx"
+                     >
+                  </div>
+
+                  <div class="input-wrapper">
+                    <label for="user-email" class="modal-label">E-mail</label>
+                    <input 
+                    type="email" 
+                    class="modal-input" 
+                    name="user-email"
+                    id="user-email"
+                    required
+                    placeholder="example@gmail.com"
+                    >
+                  </div>
+                  
+                    <button class="modal-btn" type="submit">Send</button>
+            </form>
+        </div>
+      </div>
+
     </main>
   </body>
 </html>
